--- a/pages/RNJetH1+.html
+++ b/pages/RNJetH1+.html
@@ -55,7 +55,8 @@
                 <div class="product-title">
                     <h1>RNJet H1+ <span>Промышленный поточный принтер / Кодировщик даты</span></h1>
                     <p>RNJet H1+ — это высокоскоростной принтер для нанесения дат мелким шрифтом, обеспечивающий быстрое
-                        кодирование и маркировку сухих продуктов с проверенной производительностью. Компактный, надежный и экономичный.</p>
+                        кодирование и маркировку сухих продуктов с проверенной производительностью. Компактный, надежный
+                        и экономичный.</p>
                     <div class="badge-container">
                         <span class="badge">Маркировка мелкими символами</span>
                         <span class="badge">0% простоя</span>
@@ -80,7 +81,8 @@
                     <table class="specs-table">
                         <tr>
                             <td>Технология</td>
-                            <td>Пьезоэлектрическая печатающая головка (DoD), гравитационная подача / Термоголовка HP TIJ 2.5</td>
+                            <td>Пьезоэлектрическая печатающая головка (DoD), гравитационная подача / Термоголовка HP TIJ
+                                2.5</td>
                         </tr>
                         <tr>
                             <td>Макс. скорость печати</td>
@@ -108,7 +110,8 @@
                         </tr>
                         <tr>
                             <td>Цвета чернил</td>
-                            <td>Черный, пигментированный белый, красный, желтый, синий, синий FDG, темно-розовый FDG, УФ-черный, УФ-белый</td>
+                            <td>Черный, пигментированный белый, красный, желтый, синий, синий FDG, темно-розовый FDG,
+                                УФ-черный, УФ-белый</td>
                         </tr>
                         <tr>
                             <td>Ориентация печати</td>
@@ -176,7 +179,8 @@
                     </ul>
                     <div style="margin-top: 20px;">
                         <h3 style="color: var(--blue);">Программное обеспечение</h3>
-                        <p>RN Soft +, поддержка языков: английский (по умолчанию), французский, испанский, итальянский, португальский, персидский, русский и другие.</p>
+                        <p>RN Soft +, поддержка языков: английский (по умолчанию), французский, испанский, итальянский,
+                            португальский, персидский, русский и другие.</p>
                     </div>
                 </div>
 
@@ -193,7 +197,8 @@
                         <span class="color-dot" style="background: #2c3e50;"></span> УФ-черный
                         <span class="color-dot" style="background: #ecf0f1; border:1px solid #000;"></span> УФ-белый
                     </div>
-                    <p style="margin-top: 15px;">Чернила на водной, сольвентной и УФ-основе. Быстросохнущие (1-3 сек). Экономичные расходные материалы. Картриджная система.</p>
+                    <p style="margin-top: 15px;">Чернила на водной, сольвентной и УФ-основе. Быстросохнущие (1-3 сек).
+                        Экономичные расходные материалы. Картриджная система.</p>
                 </div>
 
                 <!-- Применение-->
@@ -213,7 +218,8 @@
                         <span class="app-item">Ткани, текстиль</span>
                         <span class="app-item">Бумага</span>
                     </div>
-                    <p style="margin-top: 15px;">Пористые (картон, бумага, дерево, ткани) и непористые поверхности (металлы, пластик, стекло).</p>
+                    <p style="margin-top: 15px;">Пористые (картон, бумага, дерево, ткани) и непористые поверхности
+                        (металлы, пластик, стекло).</p>
                 </div>
             </section>
 
@@ -221,22 +227,65 @@
             <section class="benefits-highlight">
                 <h2>Почему стоит обратить внимание на этот кодировщик даты</h2>
                 <div class="benefits-grid" style="grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));">
-                    <div class="benefit-item"><h3>1. Низкая стоимость</h3><p>Непревзойденное соотношение цены и качества.</p></div>
-                    <div class="benefit-item"><h3>2. Высота печати</h3><p>До 12,7 мм.</p></div>
-                    <div class="benefit-item"><h3>3. Простота использования</h3><p>Быстрое создание макета кода/сообщений.</p></div>
-                    <div class="benefit-item"><h3>4. Автономная работа</h3><p>ПК не требуется.</p></div>
-                    <div class="benefit-item"><h3>5. Высокое разрешение</h3><p>300 dpi для кодов, графики, логотипов.</p></div>
-                    <div class="benefit-item"><h3>6. Высокая скорость</h3><p>До 180 м/мин (150 dpi) / 90 м/мин (300 dpi). Не замедляет линию.</p></div>
-                    <div class="benefit-item"><h3>7. Надежность</h3><p>Не требует обслуживания.</p></div>
-                    <div class="benefit-item"><h3>8. Быстросохнущие чернила</h3><p>1-3 секунды.</p></div>
-                    <div class="benefit-item"><h3>9. Экономичность</h3><p>Экономичные расходные материалы.</p></div>
-                    <div class="benefit-item"><h3>10. Универсальность</h3><p>Печать на пористых и непористых поверхностях.</p></div>
-                    <div class="benefit-item"><h3>11. Прочность</h3><p>Выдерживает вибрации, перепады температур, пыль.</p></div>
-                    <div class="benefit-item"><h3>12. Компактность</h3><p>Продуманный дизайн, малые габариты.</p></div>
-                    <div class="benefit-item"><h3>13. Чистая работа</h3><p>Никакой грязи, никаких отходов.</p></div>
-                    <div class="benefit-item"><h3>14. Поддержка</h3><p>Внимательная и оперативная послепродажная поддержка.</p></div>
+                    <div class="benefit-item">
+                        <h3>1. Низкая стоимость</h3>
+                        <p>Непревзойденное соотношение цены и качества.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>2. Высота печати</h3>
+                        <p>До 12,7 мм.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>3. Простота использования</h3>
+                        <p>Быстрое создание макета кода/сообщений.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>4. Автономная работа</h3>
+                        <p>ПК не требуется.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>5. Высокое разрешение</h3>
+                        <p>300 dpi для кодов, графики, логотипов.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>6. Высокая скорость</h3>
+                        <p>До 180 м/мин (150 dpi) / 90 м/мин (300 dpi). Не замедляет линию.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>7. Надежность</h3>
+                        <p>Не требует обслуживания.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>8. Быстросохнущие чернила</h3>
+                        <p>1-3 секунды.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>9. Экономичность</h3>
+                        <p>Экономичные расходные материалы.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>10. Универсальность</h3>
+                        <p>Печать на пористых и непористых поверхностях.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>11. Прочность</h3>
+                        <p>Выдерживает вибрации, перепады температур, пыль.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>12. Компактность</h3>
+                        <p>Продуманный дизайн, малые габариты.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>13. Чистая работа</h3>
+                        <p>Никакой грязи, никаких отходов.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>14. Поддержка</h3>
+                        <p>Внимательная и оперативная послепродажная поддержка.</p>
+                    </div>
                 </div>
-                <div style="margin-top:30px; background: rgba(255,255,255,0.2); padding:20px; border-radius:20px; font-family: monospace;">
+                <div
+                    style="margin-top:30px; background: rgba(255,255,255,0.2); padding:20px; border-radius:20px; font-family: monospace;">
                     <div style="font-size:20px;">Ref:108.5897.895</div>
                     <div style="font-size:18px;">0112345678901234</div>
                     <div>PRO 02/12/2019 EXP 05/10/2021</div>
@@ -327,12 +376,34 @@
                 </div>
             </section>
 
+            <!-- Блок с формой подписки -->
+            <section class="contact-form-section">
+                <h2>Остались вопросы?</h2>
+                <form class="contact-form" action="mailto:office@insoftretail.ru" method="post" enctype="text/plain">
+                    <div class="form-row">
+                        <input type="text" placeholder="Имя" class="form-input" name="firstname" required>
+                        <input type="text" placeholder="Фамилия" class="form-input" name="lastname" required>
+                    </div>
+                    <div class="form-row">
+                        <input type="email" placeholder="Почта" class="form-input full-width" name="email" required>
+                    </div>
+                    <div class="form-row">
+                        <textarea placeholder="Текст сообщения" class="form-textarea" rows="4" name="message"
+                            required></textarea>
+                    </div>
+                    <button type="submit" class="form-submit-btn">ОТПРАВИТЬ ВОПРОС</button>
+                    <p style="margin-top: 15px; font-size: 14px; color: #666;">Ваше сообщение будет отправлено на почту:
+                        office@insoftretail.ru</p>
+                </form>
+            </section>
+
             <!-- Блок с контактами -->
             <section class="contact-info-section" style="margin-top: 80px;">
                 <div class="contact-info-grid">
                     <div class="contact-info-column">
                         <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
-                        <p>RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет разрабатываем доступные и высокопроизводительные кодировщики.</p>
+                        <p>RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет
+                            разрабатываем доступные и высокопроизводительные кодировщики.</p>
                     </div>
                     <div class="contact-info-column">
                         <h3>Контакты</h3>
@@ -359,14 +430,6 @@
         </div>
     </main>
     <script src="../scripts/index.js"></script>
-    <script>
-        document.querySelectorAll('.tab-btn').forEach(btn => {
-            btn.addEventListener('click', function () {
-                document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-                this.classList.add('active');
-            });
-        });
-    </script>
 </body>
 
 </html>
