--- a/pages/RNJetH2+.html
+++ b/pages/RNJetH2+.html
@@ -54,7 +54,11 @@
                 </div>
                 <div class="product-title">
                     <h1>RNJet H2+ <span>Двухголовочный TIJ принтер / Кодировщик даты</span></h1>
-                    <p>RNJet H2+ — это двухголовочный высокоточный высокоскоростной промышленный термопринтер для печати мелких символов, обеспечивающий быструю кодировку и маркировку сухих продуктов с проверенной производительностью. Используя сольвентные и водорастворимые чернила, он может печатать текст, логотипы, счетчики, штрихкоды, временные коды, даты и многое другое на различных пористых и непористых поверхностях с превосходным разрешением печати.</p>
+                    <p>RNJet H2+ — это двухголовочный высокоточный высокоскоростной промышленный термопринтер для печати
+                        мелких символов, обеспечивающий быструю кодировку и маркировку сухих продуктов с проверенной
+                        производительностью. Используя сольвентные и водорастворимые чернила, он может печатать текст,
+                        логотипы, счетчики, штрихкоды, временные коды, даты и многое другое на различных пористых и
+                        непористых поверхностях с превосходным разрешением печати.</p>
                     <div class="badge-container">
                         <span class="badge">Быстросохнущий</span>
                         <span class="badge">Мелкосимвольный</span>
@@ -66,7 +70,8 @@
                         <a href="#" class="rn-button"
                             style="background: var(--red); color: white; padding: 15px 30px;">Скачать брошюру</a>
                         <a href="#" class="rn-button"
-                            style="background: transparent; color: var(--red); border: 2px solid var(--red); padding: 15px 30px;">Запросить цену</a>
+                            style="background: transparent; color: var(--red); border: 2px solid var(--red); padding: 15px 30px;">Запросить
+                            цену</a>
                     </div>
                 </div>
             </section>
@@ -191,7 +196,8 @@
                         <h3 style="color: var(--blue);">Программное обеспечение</h3>
                         <p>RNSoft+, поддержка языков: английский (по умолчанию), французский, испанский, итальянский,
                             португальский, персидский, русский и другие.</p>
-                        <p><strong>Типы контента:</strong> статический текст, дата, время, код смены, счетчик, внешняя база данных, изображение</p>
+                        <p><strong>Типы контента:</strong> статический текст, дата, время, код смены, счетчик, внешняя
+                            база данных, изображение</p>
                         <p><strong>Поддерживаемые базы данных:</strong> .csv</p>
                     </div>
                 </div>
@@ -200,13 +206,18 @@
                 <div class="info-card">
                     <h2>Типы чернил для всех типов поверхности</h2>
                     <h3 style="color: var(--blue); margin-top: 10px;">На основе растворителей</h3>
-                    <p>Специально разработанные для печати на непористых материалах: стеклянные бутылки и контейнеры, пластиковые бутылки и контейнеры, резиновые детали, жестяные банки, металлические компоненты, гибкие пластиковые пленки, термоусадочная пленка, дерево, яйца, ПВХ-трубы, эпоксидный ламинат, печатные платы, формованные пластмассы.</p>
-                    
+                    <p>Специально разработанные для печати на непористых материалах: стеклянные бутылки и контейнеры,
+                        пластиковые бутылки и контейнеры, резиновые детали, жестяные банки, металлические компоненты,
+                        гибкие пластиковые пленки, термоусадочная пленка, дерево, яйца, ПВХ-трубы, эпоксидный ламинат,
+                        печатные платы, формованные пластмассы.</p>
+
                     <h3 style="color: var(--blue); margin-top: 20px;">На водной основе</h3>
-                    <p>Разработанные для печати на пористых материалах: дерево, гофрированные коробки, картон, переработанная бумага.</p>
-                    
+                    <p>Разработанные для печати на пористых материалах: дерево, гофрированные коробки, картон,
+                        переработанная бумага.</p>
+
                     <div style="margin-top: 20px;">
-                        <p><strong>Цвета чернил:</strong> Черный (стандарт). Для заказа цветных чернил свяжитесь с нами.</p>
+                        <p><strong>Цвета чернил:</strong> Черный (стандарт). Для заказа цветных чернил свяжитесь с нами.
+                        </p>
                     </div>
                 </div>
 
@@ -236,7 +247,8 @@
                         <span class="app-item">Фармацевтика</span>
                         <span class="app-item">Мешки с мукой/цементом</span>
                     </div>
-                    <p style="margin-top: 15px;"><strong>Пористые:</strong> картон, бумага, дерево, ткани, яйца. <strong>Непористые:</strong> стекло, пластик, металл, резина, пленка.</p>
+                    <p style="margin-top: 15px;"><strong>Пористые:</strong> картон, бумага, дерево, ткани, яйца.
+                        <strong>Непористые:</strong> стекло, пластик, металл, резина, пленка.</p>
                 </div>
             </section>
 
@@ -244,15 +256,42 @@
             <section class="benefits-highlight">
                 <h2>Почему стоит обратить внимание на этот струйный принтер TIJ</h2>
                 <div class="benefits-grid" style="grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));">
-                    <div class="benefit-item"><h3>1. Бюджетный</h3><p>Доступная цена при высоком качестве.</p></div>
-                    <div class="benefit-item"><h3>2. Никакого беспорядка</h3><p>Чистая работа, никакой грязи и отходов.</p></div>
-                    <div class="benefit-item"><h3>3. Простота в использовании</h3><p>Интуитивный интерфейс, быстрое создание макетов.</p></div>
-                    <div class="benefit-item"><h3>4. Высокая скорость печати</h3><p>До 180 м/мин.</p></div>
-                    <div class="benefit-item"><h3>5. Двойные печатающие головки</h3><p>Две головки для увеличения производительности.</p></div>
-                    <div class="benefit-item"><h3>6. Коды высокой плотности</h3><p>Печать с высоким разрешением 300 dpi.</p></div>
-                    <div class="benefit-item"><h3>7. Быстросохнущие чернила</h3><p>1-3 секунды.</p></div>
-                    <div class="benefit-item"><h3>8. Устойчивость</h3><p>Выдерживает вибрации и перепады температуры.</p></div>
-                    <div class="benefit-item"><h3>9. Автономная работа</h3><p>ПК не требуется.</p></div>
+                    <div class="benefit-item">
+                        <h3>1. Бюджетный</h3>
+                        <p>Доступная цена при высоком качестве.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>2. Никакого беспорядка</h3>
+                        <p>Чистая работа, никакой грязи и отходов.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>3. Простота в использовании</h3>
+                        <p>Интуитивный интерфейс, быстрое создание макетов.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>4. Высокая скорость печати</h3>
+                        <p>До 180 м/мин.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>5. Двойные печатающие головки</h3>
+                        <p>Две головки для увеличения производительности.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>6. Коды высокой плотности</h3>
+                        <p>Печать с высоким разрешением 300 dpi.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>7. Быстросохнущие чернила</h3>
+                        <p>1-3 секунды.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>8. Устойчивость</h3>
+                        <p>Выдерживает вибрации и перепады температуры.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <h3>9. Автономная работа</h3>
+                        <p>ПК не требуется.</p>
+                    </div>
                 </div>
             </section>
 
@@ -261,7 +300,8 @@
                 <h2>9 преимуществ промышленного термоструйного принтера RNJet H2</h2>
                 <div class="printers-grid">
                     <div class="printers-grid-card">Быстрая настройка – легко интегрируется в линию</div>
-                    <div class="printers-grid-card">Превосходное качество – маркировка легко читается и сканируется</div>
+                    <div class="printers-grid-card">Превосходное качество – маркировка легко читается и сканируется
+                    </div>
                     <div class="printers-grid-card">Две печатающие головки</div>
                     <div class="printers-grid-card">Печать чего угодно – графика, изображения, логотипы</div>
                     <div class="printers-grid-card">Печать на чем угодно – любые поверхности</div>
@@ -271,12 +311,14 @@
                     <div class="printers-grid-card">Не требует обслуживания – печатающая головка остается чистой</div>
                 </div>
                 <!-- Пример маркировки с картинки -->
-                <div style="margin-top: 30px; background: #f9f9f9; padding: 20px; border-radius: 20px; display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; align-items: center; font-family: monospace;">
+                <div
+                    style="margin-top: 30px; background: #f9f9f9; padding: 20px; border-radius: 20px; display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; align-items: center; font-family: monospace;">
                     <div><span style="font-weight: bold;">GTIN:</span> 8141904045</div>
                     <div><span style="font-weight: bold;">UID:</span> 873767438899</div>
                     <div><span style="font-weight: bold;">EXP:</span> 2020-12-31</div>
                     <div><span style="font-weight: bold;">Lot:</span> 89754B</div>
-                    <div style="background: #000; color: white; padding: 10px 20px; border-radius: 8px;">04201 13:28:30</div>
+                    <div style="background: #000; color: white; padding: 10px 20px; border-radius: 8px;">04201 13:28:30
+                    </div>
                 </div>
             </section>
 
@@ -349,12 +391,34 @@
                 </div>
             </section>
 
+            <!-- Блок с формой подписки -->
+            <section class="contact-form-section">
+                <h2>Остались вопросы?</h2>
+                <form class="contact-form" action="mailto:office@insoftretail.ru" method="post" enctype="text/plain">
+                    <div class="form-row">
+                        <input type="text" placeholder="Имя" class="form-input" name="firstname" required>
+                        <input type="text" placeholder="Фамилия" class="form-input" name="lastname" required>
+                    </div>
+                    <div class="form-row">
+                        <input type="email" placeholder="Почта" class="form-input full-width" name="email" required>
+                    </div>
+                    <div class="form-row">
+                        <textarea placeholder="Текст сообщения" class="form-textarea" rows="4" name="message"
+                            required></textarea>
+                    </div>
+                    <button type="submit" class="form-submit-btn">ОТПРАВИТЬ ВОПРОС</button>
+                    <p style="margin-top: 15px; font-size: 14px; color: #666;">Ваше сообщение будет отправлено на почту:
+                        office@insoftretail.ru</p>
+                </form>
+            </section>
+
             <!-- Блок с контактами -->
             <section class="contact-info-section" style="margin-top: 80px;">
                 <div class="contact-info-grid">
                     <div class="contact-info-column">
                         <a href="../index.html"><img src="../assets/images/Логотип.svg" class="logotype"></a>
-                        <p>RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет разрабатываем доступные и высокопроизводительные кодировщики.</p>
+                        <p>RN Mark Inc. — производитель промышленных струйных принтеров в Канаде. Более 20 лет
+                            разрабатываем доступные и высокопроизводительные кодировщики.</p>
                     </div>
                     <div class="contact-info-column">
                         <h3>Контакты</h3>
@@ -381,14 +445,6 @@
         </div>
     </main>
     <script src="../scripts/index.js"></script>
-    <script>
-        document.querySelectorAll('.tab-btn').forEach(btn => {
-            btn.addEventListener('click', function () {
-                document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-                this.classList.add('active');
-            });
-        });
-    </script>
 </body>
 
 </html>
